# adaptive-feature-interaction-networks-with-dynamic-gating

./: .gitignore  QUALITY_PASS_SUMMARY.txt  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: per_class_metrics.json  results.json  test_evaluation_results.json  training_history.json
scripts/: evaluate.py  predict.py  train.py  verify_installation.py
src/adaptive_feature_interaction_networks_with_dynamic_gating/: __init__.py
src/adaptive_feature_interaction_networks_with_dynamic_gating/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_feature_interaction_networks_with_dynamic_gating/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_feature_interaction_networks_with_dynamic_gating/models/: __init__.py  components.py  model.py
src/adaptive_feature_interaction_networks_with_dynamic_gating/training/: __init__.py  trainer.py
src/adaptive_feature_interaction_networks_with_dynamic_gating/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
